Concluido js falta fazer raedme

--- a/index.html
+++ b/index.html
@@ -25,11 +25,21 @@
         <section class="form">
             <form class="campos" action="#">
                 <input class="itens" type="text" placeholder="Nome completo *" required>
+                <p class="mensagem-campo-obrigatorio">campo obrigatório</p>
+
                 <input class="itens" type="email" placeholder="Email *" required>
-                <input class="itens" type="tel" placeholder="Telefone *" required>
+                <p class="mensagem-campo-obrigatorio">campo obrigatório</p>
+
+                <input class="itens " type="tel" placeholder="Telefone *" required>
+                <p class="mensagem-campo-obrigatorio ">campo obrigatório</p>
+
                 <textarea class="itens" name="" id="" cols="30" rows="5" placeholder="Mensagem *" required></textarea>
-                <p >*campos obrigatórios</p>
-                <button class="itens" type="submit">Enviar</button>
+                <p class="mensagem-campo-obrigatorio ">campo obrigatório</p>
+
+                <p>*campos obrigatórios</p>
+
+                <button  id="button-submit" type="submit">Enviar</button>
+                <!-- <p class="itens" id="button-submit">Enviar</p> -->
             </form>
         </section>
     </main>
