--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/mediaQuery.css">
+    <link rel="stylesheet" href="src/css/mediaquery.css">
 </head>
 
 <body>
